[package]
name = "wmem"
description = "Windows Memory Manipulation library"
authors = [ "varsity <william_hoden95@tutanota.com>" ]
categories = [ "development-tools", "os::windows-apis" ]
keywords = [ "memory", "winapi", "game-cheat", "trainer", "cheat-trainer" ]
repository = "https://github.com/vars1ty/WMem"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"

[lib]
path = "src/lib.rs"

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "consoleapi", "handleapi", "processthreadsapi", "memoryapi", "tlhelp32"]}
memmem = "0.1.1"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
