[package]
name = "wmem"
description = "Windows Memory Manipulation library"
authors = [ "varsity" ]
categories = [ "development-tools", "os::windows-apis" ]
keywords = [ "memory", "winapi", "game-cheat", "trainer", "cheat-trainer" ]
repository = "https://github.com/vars1ty/WMem"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"

[lib]
path = "src/lib.rs"

[dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "System", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader"] }
generic-cast = "0.1.0"
patternscan = "1.2.0"
memmem = "0.1.1"
rayon = "1.8.0"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
lto = "fat"
